NXP-30483: cleanup / format